--- a/算法/Sort.html
+++ b/算法/Sort.html
@@ -2,7 +2,7 @@
  * @Autor: hjz
  * @Date: 2020-05-03 11:14:36
  * @LastEditors: hjz
- * @LastEditTime: 2020-05-03 19:44:38
+ * @LastEditTime: 2020-05-05 10:58:57
  * @Description: 排序算法
  -->
 <!DOCTYPE html>
@@ -24,7 +24,7 @@
                 for (let j = 0; j < len - i - 1; j++) {
                     // 因为每次遍历就沉底，所以最后一个元素不需要再遍历。
                     // 因为遍历需要与后一个元素进行比对，所以j<len-i-1
-                    if (arr[j] < arr[j + 1]) {
+                    if (arr[j] > arr[j + 1]) {
                         let temp = arr[j + 1];
                         arr[j + 1] = arr[j];
                         arr[j] = temp;
@@ -70,20 +70,119 @@
             return arr;
         }
 
+        // 归并排序
+        // 归并排序法是将两个（或两个以上）有序表合并成一个新的有序表，即把待排序序列分为若干个子序列，每个子序列是有序的。然后再把有序子序列合并为整体有序序列。
+        // 和选择排序一样，归并排序的性能不受输入数据的影响，但表现比选择排序好的多，因为始终都是O(n log n）的时间复杂度。代价是需要额外的内存空间。
+        // 1、把长度为n的输入序列分成两个长度为n/2的子序列;2、对这两个子序列继续分为m/2的子序列，一直分下去;3、将两个排序好的子序列合并成一个最终的排序序列。
+        // 先分治，最后递归归并
+        function merge(left, right) {
+            // 合并并排序
+            let re = [];
+            // 注意！！！！！！！left和right的length是变动的！！！不能一开始就定义好
+            while (left.length > 0 && right.length > 0) {
+                // 选取两个数组中较小或较大值到新数组上
+                if (left[0] < right[0]) {
+                    // 因为每次都用shift()方法，所以选取的数据都在第一个
+                    re.push(left.shift());
+                } else {
+                    re.push(right.shift());
+                }
+            }
+            // 当左右数组长度不相等，则将剩余的数据拼起来
+            // 可以直接两个数组拼在re上，因为其中一个是空数组，无妨
+            return re.concat(left).concat(right);
+        }
+        // 自上而下的递归（所有递归的方法都可以用迭代(自下而上的迭代)重写，
+        function mergeSort(arr) {
+            // 每个子序列只要有两个以上，就需要分支
+            if (arr.length < 2) {
+                return arr; // 结束条件
+            }
+            // 分支，讲数组分为两个子数组
+            let mid = Math.floor(arr.length / 2);
+            // 因为用到slice，所以不影响原数组！！！这里就体现在空间换时间了！！！
+            let left = arr.slice(0, mid);
+            let right = arr.slice(mid);
+            // 下面这句话的意思是，左右两个子数组先排序，然后再合并返回。
+            return merge(mergeSort(left), mergeSort(right));
+        }
 
+        // 快速排序
+        // 大致分三步：1、找基准（一般是以中间项为基准）;2、遍历数组，小于基准的放在left，大于基准的放在right;3、递归
+        // 和归并排序不同的是，归并排序是先分为两组再继续排，而快速排序是边分边排
+        function quickSort1(arr) {
+            // 只有数组大于2的时候才可以进行左右分组
+            if (arr.length <= 1) {
+                return arr;
+            }
+            // 找基准，并且把基准从原数组中抽离出来，但这个涉及改变原数组，不太好
+            let pivotIndex = Math.floor(arr.length / 2);
+            let pivot = arr.splice(pivotIndex, 1)[0];
+            // 定义左右分组
+            let left = [];
+            let right = [];
+            // 左右分组以基准大小比较进行分边
+            for (let i = 0; i < arr.length; i++) {
+                if (arr[i] <= pivot) {
+                    left.push(arr[i]);
+                } else {
+                    right.push(arr[i]);
+                }
+            }
+            // 左右分组继续进行递归快排，然后与基准拼接一起返回
+            let newArr = quickSort(left).concat(pivot, quickSort(right));
+            return newArr;
+        }
+        function quickSort(arr) {
+            if (arr.length <= 1) {
+                return arr;
+            }
+            var left = [];
+            var right = [];
+            var pivotkey = arr[0];
+            // 直接取数组的第一个作为基准，可以避免改变原数组
+            for (var i = 1; i < arr.length; i++) {
+                if (arr[i] < pivotkey) {
+                    left.push(arr[i]);
+                } else {
+                    right.push(arr[i]);
+                }
+            }
+            return quickSort(left).concat(pivotkey, quickSort(right));
+        }
 
-
-
-
+        // 二分搜索
+        // 对于有序序列，二分搜索是最快的。
+        function binarySearch(arr,item){
+            let left = 0;
+            let right = arr.length;
+            // 剩下最后一个元素的时候，也是需要比较的。所以结束条件为left和right重叠指向最后一个元素
+            while(left<=right){
+                let mid = Math.floor((left+right)/2);
+                let ele = arr[mid]; // 获取中间的值
+                // 进行比较，然后左右二分查找，+1-1代表排除当前ele这个值
+                if(ele<item){
+                    left = mid + 1;
+                }else if(ele>item){
+                    right = mid - 1;
+                }else{
+                    return mid; // 如果相等则返回
+                }
+            }
+            return -1; // 找不到
+        }
 
         let arr = [6, 4, 3, 5, 1, 2, 7, 9, 8];
+        // let arr = [3, 2, 1];
         // bubbleSort(arr);
         // insertSort(arr);
-        shellSort(arr);
+        // shellSort(arr);
+        // mergeSort(arr);
+        // console.log(mergeSort(arr));
+        // console.log(quickSort(arr));
+        // console.log(binarySearch(arr,8));
+
         console.log(arr);
-
-
-
     </script>
 </body>
 
